[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-homework-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29.1,<1.2.0",
    "numpy>=1.20,<3.0",
    "torch>=2.3,<3.0",
    "cloudpickle",
    "pandas",
    "matplotlib",
    "huggingface_sb3>=3.0,<4.0",
    "tqdm",
    "rich",
    "optuna>=3.0",
    "pyyaml>=5.1",
    "pytablewriter~=1.2",
    "shimmy~=2.0",
    "ale-py>=0.11.0",
]

[project.optional-dependencies]
sb3-extras = [
    "opencv-python",
    "pygame",
    "tensorboard>=2.9.1",
    "psutil",
    "ale-py>=0.9.0",
    "pillow",
]
zoo-plots = [
    "seaborn",
    "rliable~=1.2.0",
    "scipy~=1.10",
]
dev = [
    # sb3 tests & lint/format
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-xdist",
    "mypy",
    "ruff>=0.3.1",
    "black>=25.1.0,<26",
    # zoo tests
    "mujoco>=2.3,<4",
    "highway-env>=1.10.1,<1.11.0",
]
docs = [
    "sphinx>=5,<9",
    "sphinx-autobuild",
    "sphinx-rtd-theme>=1.3.0",
    "sphinxcontrib.spelling",
    "sphinx_copybutton",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
